# poke-team-builder

./: .gitignore  README.md  pyproject.toml
notebooks/: tests.ipynb
src/: run_etl.py  script_test.py
src/database/: connection.py  migrate.py  schema.py  validation.py
src/extract/: extract.py  http.py  listings.py  urls.py
src/load/: pokemon.py
src/scripts/: init_db.py
src/transform/: transform.py
tests/extract/: test_extract_resource.py  test_http.py  test_http_fetch_json.py  test_listing_extract_results_urls.py  test_listings.py  test_url_resource_url.py  test_urls.py  text_extract_core.py
tests/load/: test_load_pokemon.py
tests/test_database/: test_database_initialization.py
tests/test_extract/: test_http.py  test_listing.py  test_url.py
tests/transform/: test_transform_pokemon.py
