[project]
name = "poke-team-builder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0.0",
  "polars>=0.20.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pre-commit>=3.7.0",
  "ruff>=0.5.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
